Внесение правок в разметку

--- a/catalog.html
+++ b/catalog.html
@@ -10,15 +10,15 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
+          <a class="logo" href="#"><img src="#" alt="Логотип Glaccy" width="" height=""></a>
           <ul>
-            <li><a class="logo" href="index.html"><img src="#" alt="Логотип Glaccy" width="" height=""></a></li>
             <li><a class="navigation-active" href="#">Каталог</a></li>
             <li><a class="navigation" href="#">Доставка и оплата</a></li>
             <li><a class="navigation" href="#">О компании</a></li>
           </ul>
         </nav>
         <div class="user-block">
-          <a class="search" href="#"></a>
+          <a class="search" href="#">search</a>
           <a class="login" href="#">Вход</a>
           <a class="cart-active" href="#">2 товара</a>
         </div>
@@ -85,25 +85,25 @@
         <div class="row">
           <article class="item">
             <img src="#" alt="Апельсиновое" width="" height="">
-            <p class="item-price">310    /кг</p>
+            <span class="item-price">310    /кг</span>
             <a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="Кофейное" width="" height="">
-            <p class="item-price">380    /кг</p>
+            <span class="item-price">380    /кг</span>
             <a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="Клубничное" width="" height="">
-            <p class="item-price">355    /кг</p>
+            <span class="item-price">355    /кг</span>
             <a class="item-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="Крем-брюле" width="" height="">
-            <p class="item-price">415    /кг</p>
+            <span class="item-price">415    /кг</span>
             <a class="item-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
@@ -111,25 +111,25 @@
         <div class="row">
           <article class="item">
             <img src="#" alt="Брусничное" width="" height="">
-            <p class="item-price">325    /кг</p>
+            <span class="item-price">325    /кг</span>
             <a class="item-name" href="#">Сливочное с брусничным джемом</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="Черничное" width="" height="">
-            <p class="item-price">410    /кг</p>
+            <span class="item-price">410    /кг</span>
             <a class="item-name" href="#">Сливочно-черничное с цельными ягодами черники</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="Лимонное" width="" height="">
-            <p class="item-price">375    /кг</p>
+            <span class="item-price">375    /кг</span>
             <a class="item-name" href="#">Сливочно-лимонное с карамельной присыпкой</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="С шоколадной стружкой" width="" height="">
-            <p class="item-price">320    /кг</p>
+            <span class="item-price">320    /кг</span>
             <a class="item-name" href="#">Сливочное с шоколадной стружкой</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
@@ -137,25 +137,25 @@
         <div class="row">
           <article class="item">
             <img src="#" alt="Сливочно-ванильное" width="" height="">
-            <p class="item-price">440    /кг</p>
+            <span class="item-price">440    /кг</span>
             <a class="item-name" href="#">Сливочно-ванильное с кусочками шоколада</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="С ментоловым сиропом" width="" height="">
-            <p class="item-price">435    /кг</p>
+            <span class="item-price">435    /кг</span>
             <a class="item-name" href="#">Сливочноe с ментоловым сиропом</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="С кусочками черного шоколада" width="" height="">
-            <p class="item-price">355    /кг</p>
+            <span class="item-price">355    /кг</span>
             <a class="item-name" href="#">Сливочное с кусочками черного шоколада</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
           <article class="item">
             <img src="#" alt="С мятным сиропом" width="" height="">
-            <p class="item-price">420    /кг</p>
+            <span class="item-price">420    /кг</span>
             <a class="item-name" href="#">Сливочное с мятным сиропом</a>
             <a class="btn" href="#">Быстрый просмотр</a>
           </article>
