--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
+          <a class="logo"><img src="#" alt="Логотип Glaccy" width="" height=""></a>
           <ul>
-            <li><a class="logo"><img src="#" alt="Логотип Glaccy" width="" height=""></a></li>
             <li><a class="navigation" href="#">Каталог</a></li>
             <li><a class="navigation" href="#">Доставка и оплата</a></li>
             <li><a class="navigation" href="#">О компании</a></li>
           </ul>
         </nav>
         <div class="user-block">
-          <a class="search" href="#"></a>
+          <a class="search" href="#">search</a>
           <a class="login" href="#">Вход</a>
           <a class="cart" href="#">Пусто</a>
         </div>
@@ -52,30 +52,26 @@
       </section>
       <section class="catalog">
         <article class="item">
-          <img src="#" alt="ХИТ" width="" height="">
           <img src="#" alt="Апельсиновое" width="" height="">
-          <p class="item-price">310    /кг</p>
+          <span class="item-price">310    /кг</span>
           <a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
           <a class="btn" href="#">Быстрый просмотр</a>
         </article>
         <article class="item">
-          <img src="#" alt="ХИТ" width="" height="">
           <img src="#" alt="Кофейное" width="" height="">
-          <p class="item-price">380    /кг</p>
+          <span class="item-price">380    /кг</span>
           <a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
           <a class="btn" href="#">Быстрый просмотр</a>
         </article>
         <article class="item">
-          <img src="#" alt="ХИТ" width="" height="">
           <img src="#" alt="Клубничное" width="" height="">
-          <p class="item-price">355    /кг</p>
+          <span class="item-price">355    /кг</span>
           <a class="item-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
           <a class="btn" href="#">Быстрый просмотр</a>
         </article>
         <article class="item">
-          <img src="#" alt="ХИТ" width="" height="">
           <img src="#" alt="Крем-брюле" width="" height="">
-          <p class="item-price">415    /кг</p>
+          <span class="item-price">415    /кг</span>
           <a class="item-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
           <a class="btn" href="#">Быстрый просмотр</a>
         </article>
@@ -110,8 +106,10 @@
       <article class="subscribe">
         <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит.
           Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
-          <input type="text" name="email" value="" placeholder="Электронная почта">
-          <button class="btn" type="submit">Отправить</button>
+          <form action="#" method="get">
+            <input type="text" name="email" value="" placeholder="Электронная почта">
+            <button class="btn" type="submit">Отправить</button>
+          </form>
       </article>
       <article class="map">
         <img src="#" alt="Карта" width="" height="">
