--- a/catalog.html
+++ b/catalog.html
@@ -185,7 +185,7 @@
         <a href="#">Экологические стандарты</a>
       </section>
       <section class="footer-copyright">
-        <p>Разработано:</p>
+        <span>Разработано:</span>
         <a class="copyright" href="https://htmlacademy.ru">Сделано в HTML Academy © 2016</a>
       </section>
     </footer>
