--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -10,9 +11,9 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
-          <a class="logo"><img src="#" alt="Логотип Glaccy" width="" height=""></a>
-          <ul>
-            <li><a class="navigation" href="#">Каталог</a></li>
+          <a class="logo"><img src="img/logo.svg" alt="Логотип Glaccy" width="154" height="64"></a>
+          <ul class="main-navigation__list">
+            <li><a class="navigation" href="catalog.html">Каталог</a></li>
             <li><a class="navigation" href="#">Доставка и оплата</a></li>
             <li><a class="navigation" href="#">О компании</a></li>
           </ul>
@@ -31,7 +32,7 @@
     <main class="container">
       <div class="gallery">
         <figure class="gallery-content">
-          <img src="#" width="" height="" alt="Крем-брюле и пломбир с малиновым джемом">
+          <img src="img/ice1.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом">
         </figure>
         <button class="btn-gallery" type="button"></button>
         <button class="btn-gallery" type="button"></button>
@@ -39,45 +40,45 @@
         <button class="order-gallery" type="submit"></button>
       </div>
       <section class="promo">
-        <article class="promo-description">
-          <h2>Малинка даром!</h2>
-          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a class="btn" href="#">Хочу варенье!</a>
+        <article>
+          <h2 class="promo__title">Малинка даром!</h2>
+          <p class="promo__description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <a class="promo__btn" href="#">Хочу варенье!</a>
         </article>
-        <article class="promo-description">
-          <h2>Шоколадки даром!</h2>
-          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a class="btn" href="#">Хочу шоколадки!</a>
+        <article>
+          <h2 class="promo__title">Шоколадки даром!</h2>
+          <p class="promo__description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+          <a class="promo__btn" href="#">Хочу шоколадки!</a>
         </article>
       </section>
       <section class="catalog">
         <article class="item">
-          <img src="#" alt="Апельсиновое" width="" height="">
-          <span class="item-price">310    /кг</span>
+          <img src="img/ice-orange.png" alt="Апельсиновое" width="267" height="267">
+          <span class="item-price">310 ₽/кг</span>
           <a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
           <a class="btn" href="#">Быстрый просмотр</a>
         </article>
         <article class="item">
-          <img src="#" alt="Кофейное" width="" height="">
-          <span class="item-price">380    /кг</span>
+          <img src="img/ice-coffee.png" alt="Кофейное" width="267" height="267">
+          <span class="item-price">380 ₽/кг</span>
           <a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
           <a class="btn" href="#">Быстрый просмотр</a>
         </article>
         <article class="item">
-          <img src="#" alt="Клубничное" width="" height="">
-          <span class="item-price">355    /кг</span>
+          <img src="img/ice-strawberry.png" alt="Клубничное" width="267" height="267">
+          <span class="item-price">355 ₽/кг</span>
           <a class="item-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
           <a class="btn" href="#">Быстрый просмотр</a>
         </article>
         <article class="item">
-          <img src="#" alt="Крем-брюле" width="" height="">
-          <span class="item-price">415    /кг</span>
+          <img src="img/ice-caramel.png" alt="Крем-брюле" width="267" height="267">
+          <span class="item-price">415 ₽/кг</span>
           <a class="item-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
           <a class="btn" href="#">Быстрый просмотр</a>
         </article>
       </section>
       <article class="about">
-        <p><b>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</b></p>
+        <p class="about__title"><b>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</b></p>
         <div class="features">
           <img src="#" alt="Мороженое" width="" height="">
           <p>Все наше мороженое изготавливается на собственном производстве,
@@ -100,8 +101,8 @@
         </div>
       </article>
       <article class="blog">
-        <p>Новое в нашем блоге</p>
-        <p>10  способов сервировки фруктовых щербетов к столу</p>
+        <p class="blog__new">Новое в нашем блоге</p>
+        <p class="blog__title">10  способов сервировки фруктовых щербетов к столу</p>
       </article>
       <article class="subscribe">
         <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит.
@@ -112,35 +113,34 @@
           </form>
       </article>
       <article class="map">
-        <img src="#" alt="Карта" width="" height="">
+        <img src="img/map.jpg" alt="Карта" width="1200" height="430">
         <div class="contacts">
           <p>
             Адрес главного офиса и офлайн магазина:
-              <span class="contacts-strong">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+              <span class="contacts__main">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
             Для заказов по телефону:
-              <span class="contacts-strong">8 812 450-25-25</span>
+              <span class="contacts__main">8 812 450-25-25</span>
             (с 10 до 20 ежедневно)
           </p>
           <a class="btn" href="#">Форма обратной связи</a>
         </div>
       </article>
     </main>
-    <footer class="main-footer">
-      <section class="footer-social">
+    <footer class="footer">
+      <section class="footer__social">
         <a class="social-btn social-btn-tw" href="#">Твиттер</a>
         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
       </section>
-      <section class="footer-navigation">
-        <a href="#"><img src="#" alt="Сердечко" width="" height="">Для поставщиков</a>
-        <a href="#">О производстве</a>
-        <a href="#">Наши документы</a>
-        <a href="#">Экологические стандарты</a>
+      <section class="footer__navigation">
+        <a class="footer__navigation__info-dealer" href="#"><img src="#" alt="Сердечко" width="" height="">Для поставщиков</a>
+        <a class="footer__navigation__info" href="#">О производстве</a>
+        <a class="footer__navigation__info" href="#">Наши документы</a>
+        <a class="footer__navigation__info" href="#">Экологические стандарты</a>
       </section>
       <section class="footer-copyright">
-        <p>Разработано:</p>
-        <a class="copyright" href="https://htmlacademy.ru">Сделано в HTML Academy © 2016</a>
+        <span>Сделано в <a class="copyright" href="https://htmlacademy.ru">HTML Academy</a> © 2016</span>
       </section>
     </footer>
   </body>
